Fixed some spacing issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,7 @@ body {
   height: 100vh;
 }
 
-main {
+notmain {
   padding: 2em;
   display: grid;
   place-items: center;
